--- a/titanium.xcconfig
+++ b/titanium.xcconfig
@@ -4,7 +4,7 @@
 // OF YOUR TITANIUM SDK YOU'RE BUILDING FOR
 //
 //
-TITANIUM_SDK_VERSION = 1.7.3.v20110826161351
+TITANIUM_SDK_VERSION = 1.8.2
 
 
 // 
